# atma_udemy_agent

./: .gitignore  CLAUDE.md  main.py  pyproject.toml  set_up.sh
.claude/: settings.json
.claude/projects/-home-ishiz-workspace-atma-udemy-agent/memory/: MEMORY.md  feedback_script_location.md
.claude/skills/data_analyst/: SKILL.md
.claude/skills/engineer/: SKILL.md
.claude/skills/engineer/sample/configs/: config.py
.claude/skills/engineer/sample/notebooks/: create_features.ipynb  exp_lgbm.ipynb  exp_lgbm_unv.ipynb  preprocess.ipynb
.claude/skills/researcher/: SKILL.md
docs/: overview.md
docs/idea_researches/: ideas.md
docs/idea_researches/details/: advanced_feature_engineering_research.md  baseline_research.md  modernbert_text_conversion_research.md
exps/: EXP_SUMMARY.md
exps/exp01/exp01_01/notebooks/: create_features.ipynb  exp_lgbm.ipynb
exps/exp01/exp01_01/src/: feature.py  model.py  runner.py
exps/exp01/exp01_02/configs/: config.py
exps/exp01/exp01_02/notebooks/: create_features.ipynb  exp_lgbm.ipynb  preprocess.ipynb
exps/exp01/exp01_02/src/: feature.py
exps/exp01/exp01_03/notebooks/: create_features.ipynb  exp_lgbm.ipynb
exps/exp01/exp01_03/src/: feature.py  model_LGBM.py  runner.py
exps/exp02/exp02_01/configs/: config.py
exps/exp02/exp02_01/notebooks/: create_prompt.ipynb  exp_modernbert.ipynb  preprocess.ipynb
exps/exp02/exp02_01/src/: prompt_builder.py  util.py
notebooks/: eda_01_overview.ipynb
sample_code/1th_place_solution/: atmacup20-solution-discussion.ipynb
sample_code/3th_place_solution/: details.md  takaito.ipynb
(+5 files in other folders)
