[project]
name = "atma-udemy-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.0",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "nbstripout>=0.9.1",
]
